2006-12-05  Paul Kienzle  <pkienzle@users.sf.net>

	* DLD-FUNCTIONS/rand.cc: Test for Poisson generator with lambda > 1e8.

2006-12-04  David Bateman  <dbateman@free.fr>

	* data.cc (Fdata): If ndims is greater than nargout and
	nargout is greater than 1, then collect size of trailing
	dimensions into retval(end).

	* load-path.cc (load_path::do_find_fcn): Return empty string if
	tests fail.

        * ov-base-mat.cc (void octave_base_matrix<MT>::assign (const
	octave_value_list&, const MT&)): Invalidate matrix type on
	assignment.

2006-11-30  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fftw_wisdom.cc (Ffftw_wisdom):
	Accept "r" or "w" for second argument.

2006-11-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fftw_wisdom.cc (Ffftw_wisdom): Look in load-path
	if reading wisdom file, but not if writing.

2006-11-28  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_struct::get_field_by_number):
	Return 0 if key_num is out of range.
	(mxArray_struct::set_field_by_number):
	Do nothing if key_num is out of range.
	(mxArray_cell::get_cell, mxArray_cell::set_cell):
	Avoid out-of-bounds indexing

2006-11-28  Luis F. Ortiz  <lortiz@interactivesupercomputing.com>

	* mex.cc (mxArray_matlab::get_n, mxArray_octave_value::get_n):
	Return product of last N-1 dims.

2006-11-28  John W. Eaton  <jwe@octave.org>

	* lex.l (eat_whitespace): Also handle CRLF as EOL.

	* dirfns.cc (Fmkdir): Handle "mkdir (parent, dir)".

2006-11-21  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::do_find_file,
	load_path::do_find_first_of, load_path::do_find_all_first_of): 
	Call rooted_pathname instead of absolute_pathname.
	* utils.cc (fcn_file_in_path, oct_file_in_path, mex_file_in_path):
	Likewise.

2006-11-16  Michael Goffioul  <michael.goffioul@swing.be>

	* oct-hist.cc (default_history_file): Instead of appending
	"/.octave_hist", append directory separator (but only if
	necessary), then ".octave_hist".

2006-11-16  John W. Eaton  <jwe@octave.org>
